<resources>
    <string name="app_name">Tip Time</string>
    <string name="masukkan_biaya_jasa">Masukkan biaya jasa</string>
    <string name="bagaimana_pelayanan_yang_diterima">Bagaimana pelayanan yang diterima?</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="good_15">Good (15%)</string>
    <string name="ok_10">OK (10%)</string>
    <string name="pajak_dihitung">Pajak dihitung</string>
    <string name="hitung_total_tip">HITUNG TOTAL TIP</string>
    <string name="total_tip_yang_diberikan">Total Tip yang diberikan: %s </string>
</resources>