<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swch"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan text "Masukkan biaya jasa"
         dengan id "editBiayaJasa" disini menggunakan Number(Decimal)
         yang nantinya hanya bisa dimasukkan dengan angka. -->
    <EditText
        android:id="@+id/editBiayaJasa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/masukkan_biaya_jasa"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textAlignment="textEnd"
        android:textColorHint="#757575"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan text "Bagaimana pelayanan yang
         diterima" dengan id "textTanya". -->
    <TextView
        android:id="@+id/textTanya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/bagaimana_pelayanan_yang_diterima"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBiayaJasa" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan Radio Group atau tempat berkumpulnya
         Radio Button dengan id "radioGroup". -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTanya">

        <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan Radio Button "Amazing (20%)" dengan
         id "radioAmazing". -->
        <RadioButton
            android:id="@+id/radioAmazing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            tools:text="Amazing (20%)" />

        <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan Radio Button "Good (15%)" dengan
         id "radioGood". -->
        <RadioButton
            android:id="@+id/radioGood"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/good_15" />

        <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan Radio Button "OK (10%)" dengan
         id "radioOk". -->
        <RadioButton
            android:id="@+id/radioOk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok_10" />
    </RadioGroup>

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
          yang memuat mengenai pembuatan CheckBox atau  atau bentuk
          persegi yang dapat di centang dengan id nya "cbPajakdihitung". -->
    <CheckBox
        android:id="@+id/cbPajakdihitung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/pajak_dihitung"
        app:layout_constraintBottom_toTopOf="@+id/btnHitung"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan Button atau tombol yang nantinya
         ketika di klik akan menampilkan hasil, idnya "btnHitung". -->
    <Button
        android:id="@+id/btnHitung"
        android:layout_width="338dp"
        android:layout_height="51dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="396dp"
        android:layout_marginEnd="16dp"
        android:text="@string/hitung_total_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan text "Total Tip yang diberikan:"
         dengan id "textTotal". -->
    <TextView
        android:id="@+id/textTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="16dp"
        android:text="@string/total_tip_yang_diberikan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Berikut adalah bagian yang ditambahkan dalam pertemuan ini
         yang memuat mengenai pembuatan Switch dengan text "Apakah
         tip dibulatkan ke atas" dengan id "switch3", ukuran textnya 16sp. -->
    <Switch
        android:id="@+id/switch3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="276dp"
        android:layout_marginEnd="16dp"
        android:text="Apakah tip dibulatkan ke atas"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText,MissingConstraints,UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck"
        tools:text="Apakah tip dibulatkan ke atas" />

</androidx.constraintlayout.widget.ConstraintLayout>